--- a/src/app/(frontend)/assets/css/services.scss
+++ b/src/app/(frontend)/assets/css/services.scss
@@ -1,8 +1,4 @@
 .services {
-  .landing {
-    margin: 0 84px;
-    padding: 200px 0 0;
-  }
 
   .section {
     margin-top: 118px;
