--- a/src/app/(frontend)/assets/css/team.scss
+++ b/src/app/(frontend)/assets/css/team.scss
@@ -1,16 +1,10 @@
 .team {
-  .inner-content-container {
-    margin: 0 124px;
-    padding-top: 200px;
-  }
-
   .staff-container {
-    margin-top: 86px;
+    margin: 86px 124px 300px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(276px, 1fr));
     grid-row-gap: 70px;
     grid-column-gap: 30px;
-    margin-bottom: 300px;
   }
 
   .staff-member {
@@ -214,10 +208,6 @@
   }
 
   @media all and (max-width: 989px) {
-    .inner-content-container {
-      padding: 100px 20px 0;
-      margin: 0;
-    }
 
     .staff-member-spotlight {
       .video-container {
