--- a/src/components/introtext.module.scss
+++ b/src/components/introtext.module.scss
@@ -1,26 +1,33 @@
-.page-title {
-  font-family: var(--ap-bold);
-  text-transform: uppercase;
-  font-size: 19px;
-  letter-spacing: 1.56px;
-}
+.intro-container {
+  margin: 0 84px;
 
-.page-intro {
-  margin-top: 30px;
-  font-family: var(--opt);
-  font-size: 46px;
-  line-height: 57px;
-}
-
-@media all and (max-width: 989px) {
   .page-title {
-    font-size: 15px;
-    letter-spacing: 1.23px;
+    font-family: var(--ap-bold);
+    text-transform: uppercase;
+    font-size: 19px;
+    letter-spacing: 1.56px;
   }
 
   .page-intro {
-    margin-top: 20px;
-    font-size: 37px;
-    line-height: 38px;
+    margin-top: 30px;
+    font-family: var(--opt);
+    font-size: 46px;
+    line-height: 57px;
+  }
+
+  @media all and (max-width: 989px) {
+    padding: 100px 0 0;
+    margin: 0 24px;
+
+    .page-title {
+      font-size: 15px;
+      letter-spacing: 1.23px;
+    }
+
+    .page-intro {
+      margin-top: 20px;
+      font-size: 37px;
+      line-height: 42px;
+    }
   }
 }
